--- a/BigMart-Sales-Analysis-and-Prediction-Mini-Project.ipynb
+++ b/BigMart-Sales-Analysis-and-Prediction-Mini-Project.ipynb
@@ -2219,7 +2219,7 @@
    ],
    "source": [
     "data = pd.get_dummies(data, columns=['Item_Fat_Content', 'Outlet_Size', 'Outlet_Location_Type', 'Outlet_Type', 'New_Item_Type'])\n",
-    "data.head()"
+    "data.info()"
    ]
   },
   {
